# guessrs

./: README.md  requirements.txt  setup.cfg
guessrs/: __init__.py  __main__.py
guessrs/data/: projections.txt  regions.txt
