[metadata]
name = guessrs
version = 0.1.0
author = Neil Freeman
author_email = contact@fakeisthenewreal.org
description = Guess the spatial reference system for unknown coordinates (U.S.-only)
license = GNU General Public License v3 (GPLv3)
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires = 
	setuptools>=40
	pyproj>=2.2

[options.package_data]
data = data/*.txt

[options.entry_points]
console_scripts = guessrs = guessrs.__main__:main
